Fixed Nutrition module not showing correct values, fixed current day's logs not being shown

--- a/src/components/pages/Dashboard/Dashboard.module.css
+++ b/src/components/pages/Dashboard/Dashboard.module.css
@@ -95,7 +95,7 @@
     background-color: #1A1A1B;
     padding: 10px;
     border-radius: 10px;
-    
+    transition: all 0.1s;
 }
 .section-header{
     width: 100%;
@@ -124,7 +124,7 @@
     min-height: 200px;
     height: 200px;
     overflow-y: auto;
-    transition: height 0.1s;
+    transition: all 0.1s;
 }
 
 
@@ -163,9 +163,25 @@
 .nutrition-section{
     height: auto;
     max-height: 250px;
-    
 }
-.nutrition-section .card-content{
+.nutrition .activity-item{
+    width: 100%;
+    height: 40px;
+    display: grid;
+    grid-template-columns: 50px 1fr 75px 50px;
+    align-items: center;
+    gap: 10px;
+}
+.nutrition .tableHeader{
+    display: grid;
+    grid-template-columns: 50px 1fr 75px 50px;
+    gap: 10px;
+    height: 25px;
+}
+.nutrition .tableHeader p{
+    color: rgba(255, 255, 255, 0.5);
+}
+.nutrition .card-content{
     max-height: 150px;
     min-height: 100px;
     display: flex;
